search debounce and profile section

--- a/src/lib/language/locals/fr.json
+++ b/src/lib/language/locals/fr.json
@@ -1,15 +1,15 @@
 {
-    "home": "Accueil",
-    "actionMovies": "Films d'Action",
-    "classicMovies": "Films Classiques",
-    "news": "Actualités",
-    "favorites": "Films Favoris",
-    "contact": "Contactez-nous",
-    "darkTheme": "Thème Sombre",
-    "lightTheme": "Thème Clair",
-    "language": "Langue",
-    "english": "Anglais",
-    "french": "Français",
-    "hindi": "Hindi"
-  }
-  
+  "home": "Accueil",
+  "actionMovies": "Films d'Action",
+  "classicMovies": "Films Classiques",
+  "news": "Actualités",
+  "Admin": "Administrateur",
+  "favorites": "Films Favoris",
+  "contact": "Contactez-nous",
+  "darkTheme": "Thème Sombre",
+  "lightTheme": "Thème Clair",
+  "language": "Langue",
+  "english": "Anglais",
+  "french": "Français",
+  "hindi": "Hindi"
+}
