--- a/src/lib/language/locals/hi.json
+++ b/src/lib/language/locals/hi.json
@@ -1,14 +1,15 @@
 {
-    "home": "होम",
-    "actionMovies": "क्रिया फिल्में",
-    "classicMovies": "क्लासिक फिल्में",
-    "news": "समाचार",
-    "favorites": "पसंदीदा फिल्में",
-    "contact": "हमसे संपर्क करें",
-    "logOut": "लॉग आउट",
-    "logIn": "लॉग इन करें",
-    "language": "भाषा",
-    "english": "अंग्रेज़ी",
-    "french": "फ्रेंच",
-    "hindi": "हिंदी"
-  }
+  "home": "होम",
+  "actionMovies": "क्रिया फिल्में",
+  "classicMovies": "क्लासिक फिल्में",
+  "news": "समाचार",
+  "Admin": "एडमिन",
+  "favorites": "पसंदीदा फिल्में",
+  "contact": "हमसे संपर्क करें",
+  "logOut": "लॉग आउट",
+  "logIn": "लॉग इन करें",
+  "language": "भाषा",
+  "english": "अंग्रेज़ी",
+  "french": "फ्रेंच",
+  "hindi": "हिंदी"
+}
